--- a/eng.html
+++ b/eng.html
@@ -77,49 +77,50 @@
     <div class="galgrid">
         <div class="galdiv">
             <img src="images/1.jpeg">
-            <p>Aisaka Taiga</p>
-            <p>"ToraDora"</p>
+            <p>Evileye</p>
+            <p>"Overlord"</p>
         </div>
         <div class="galdiv">
             <img src="images/2.jpeg">
-            <p>Yuuki Asuna</p>
-            <p>"Sword Art Online"</p>
+            <p>Violet Evergarden</p>
+            <p>"Violet Evergarden"</p>
         </div>
         <div class="galdiv">
             <img src="images/3.jpeg">
-            <p>Rin and Yukio Okumura</p>
-            <p>"Blue Exorcist"</p>
-        </div>
-        <div class="galdiv">
-            <img src="images/4.jpg">
             <p>Natsu Dragneel</p>
             <p>"Fairy Tail"</p>
         </div>
         <div class="galdiv">
-            <img src="images/5.jpg">
-            <p>Uraraka Ochako</p>
-            <p>"My Hero Academia"</p>
+            <img src="images/4.jpeg">
+            <p>Hatsune Miku</p>
+            <p>"Vocaloid"</p>
         </div>
         <div class="galdiv">
-            <img src="images/6.jpg">
+            <img src="images/5.jpeg">
+            <p>Konno Yuuki</p>
+            <p>"Sword Art Online"</p>
+        </div>
+        <div class="galdiv">
+            <img src="images/6.jpeg">
+            <p>Ahri</p>
+            <p>"League of Legends"</p>
+        </div>
+        <div class="galdiv">
+            <img src="images/7.jpeg">
             <p>Midoriya Izuku</p>
             <p>"My Hero Academia"</p>
         </div>
         <div class="galdiv">
-            <img src="images/7.jpg">
-            <p>002</p>
-            <p>"Darling in the FranXX"</p>
+            <img src="images/8.jpeg">
+            <p>Uraraka Ochako</p>
+            <p>"My Hero Academia"</p>
         </div>
         <div class="galdiv">
-            <img src="images/8.jpg">
-            <p>Koyuki Hinashi</p>
-            <p>"Fuuka"</p>
-        </div>
-        <div class="galdiv">
-            <img src="images/9.jpg">
-            <p>Uzumaki Boruto</p>
+            <img src="images/9.jpeg">
+            <p>Boruto Uzumaki</p>
             <p>"Boruto"</p>
         </div>
+        
     </div>
     <div class="divlink">
         <a href="morearts.html" target="_blank" class="link1">More arts!</a>
