--- a/morearts.html
+++ b/morearts.html
@@ -14,8 +14,8 @@
 
 <nav>
     <div class="avatar">
-        <a href="https://www.youtube.com/channel/UCIVELEfMiAFROsuN7BKFvyA?view_as=subscriber" target="_blank">
-            <img src="https://pp.userapi.com/c844321/v844321737/d0101/FTya_8ng-Yc.jpg" class="avatar">
+        <a href="https:www.youtube.com/channel/UCIVELEfMiAFROsuN7BKFvyA?view_as=subscriber" target="_blank">
+            <img src="https:pp.userapi.com/c844321/v844321737/d0101/FTya_8ng-Yc.jpg" class="avatar">
         </a>
         <h1 class="div1">
             Shinobi Max
@@ -25,7 +25,7 @@
         </div>
     </div>
     <div class="menu">
-        <a href="main.html" class="link">
+        <a href="eng.html" class="link">
         Go Back!
         </a>
     </div>
@@ -33,57 +33,90 @@
 
     <article class="scroll">
         <form>
-            <input type="checkbox" id="g1">
-            <label for="g1">Check Box 1</label><br>
-            <input type="checkbox" id="g2">
-            <label for="g2">Check Box 2</label><br>
-            <input type="checkbox" id="g3">
-            <label for="g3">Check Box 3</label><br>
-            <input type="checkbox" id="g4">
-            <label for="g4">Check Box 4</label><br>
-            <input type="checkbox" id="g5">
-            <label for="g5">Check Box 5</label><br>
-            <input type="checkbox" id="g6">
-            <label for="g6">Check Box 6</label><br>
-            <input type="checkbox" id="g7">
-            <label for="g7">Check Box 7</label><br>
-            <input type="checkbox" id="g8">
-            <label for="g8">Check Box 8</label><br>
-            <input type="checkbox" id="g9">
-            <label for="g9">Check Box 9</label><br>
-            <input type="checkbox" id="g10">
-            <label for="g10">Check Box 10</label><br>
-            <input type="checkbox" id="g11">
-            <label for="g11">Check Box 11</label><br>
-            <input type="checkbox" id="g12">
-            <label for="g12">Check Box 12</label><br>
-            <input type="checkbox" id="g13">
-            <label for="g13">Check Box 13</label><br>
-            <input type="checkbox" id="g14">
-            <label for="g14">Check Box 14</label><br>
-            <input type="checkbox" id="g15">
-            <label for="g15">Check Box 15</label><br>
-            <input type="checkbox" id="g16">
-            <label for="g16">Check Box 16</label><br>
-            <input type="checkbox" id="g17">
-            <label for="g17">Check Box 17</label><br>
-            <input type="checkbox" id="g18">
-            <label for="g18">Check Box 18</label>
+            <input type="radio" name="art" id="galdiv" checked onclick="Select('galdiv')">
+            <label for="galdiv">Show All</label><br>
+
+            <input type="radio" name="art" id="AkamegaKill!" onclick="Select('AkamegaKill!')">
+            <label for="AkamegaKill!">Akame ga Kill!</label><br>
+
+            <input type="radio" name="art" id="AttackonTitan" onclick="Select('AttackonTitan')">
+            <label for="AttackonTitan">Attack on Titan</label><br>
+
+            <input type="radio" name="art" id="BlueExorcist" onclick="Select('BlueExorcist')">
+            <label for="BlueExorcist">Blue Exorcist</label><br>
+
+            <input type="radio" name="art" id="Boruto" onclick="Select('Boruto')">
+            <label for="Boruto">Boruto</label><br>
+
+            <input type="radio" name="art" id="DarlingintheFranXX" onclick="Select('DarlingintheFranXX')">
+            <label for="DarlingintheFranXX">Darling in the FranXX</label><br>
+
+            <input type="radio" name="art" id="DateaLive" onclick="Select('DateaLive')">
+            <label for="DateaLive">Date a Live</label><br>
+
+            <input type="radio" name="art" id="FairyTail" onclick="Select('FairyTail')">
+            <label for="FairyTail">Fairy Tail</label><br>
+
+            <input type="radio" name="art" id="Fuuka" onclick="Select('Fuuka')">
+            <label for="Fuuka">Fuuka</label><br>
+
+            <input type="radio" name="art" id="GameofThrones" onclick="Select('GameofThrones')">
+            <label for="GameofThrones">Game of Thrones</label><br>
+
+            <input type="radio" name="art" id="GurrenLagann" onclick="Select('GurrenLagann')">
+            <label for="GurrenLagann">Gurren Lagann</label><br>
+
+            <input type="radio" name="art" id="MyHeroAcademia" onclick="Select('MyHeroAcademia')">
+            <label for="MyHeroAcademia">My Hero Academia</label><br>
+
+            <input type="radio" name="art" id="Naruto" onclick="Select('Naruto')">
+            <label for="Naruto">Naruto</label><br>
+
+            <input type="radio" name="art" id="Other" onclick="Select('Other')">
+            <label for="Other">Other</label><br>
+
+            <input type="radio" name="art" id="Overlord" onclick="Select('Overlord')">
+            <label for="Overlord">Overlord</label><br>
+
+            <input type="radio" name="art" id="Overwatch" onclick="Select('Overwatch')"> 
+            <label for="Overwatch">Overwatch</label><br>
+
+            <input type="radio" name="art" id="SerathoftheEnd" onclick="Select('SerathoftheEnd')"> 
+            <label for="SerathoftheEnd">Serath of the End</label><br>
+
+            <input type="radio" name="art" id="SwordArtOnline" onclick="Select('SwordArtOnline')"> 
+            <label for="SwordArtOnline">Sword Art Online</label><br>
+
+            <input type="radio" name="art" id="TheWitcher" onclick="Select('TheWitcher')">
+            <label for="TheWitcher">The Witcher</label><br>
+
+            <input type="radio" name="art" id="ToraDora" onclick="Select('ToraDora')">
+            <label for="ToraDora">ToraDora</label><br>
+
+            <input type="radio" name="art" id="VioletEvergarden" onclick="Select('VioletEvergarden')"> 
+            <label for="VioletEvergarden">Violet Evergarden</label><br>
+
+            <input type="radio" name="art" id="Vocaloid" onclick="Select('Vocaloid')">
+            <label for="Vocaloid">Vocaloid</label><br>
+
+            <input type="radio" name="art" id="Wolverine" onclick="Select('Wolverine')"> 
+            <label for="Wolverine">Wolverine</label>
+
         </form>
     </article>
 
     
     <div class="icons">
-        <a href="https://vk.com/shinobi_max" target="_blank">
+        <a href="https:vk.com/shinobi_max" target="_blank">
             <img src="vk.png">
         </a>
-        <a href="https://www.instagram.com/shinobi.max/" target="_blank">
+        <a href="https:www.instagram.com/shinobi.max/" target="_blank">
             <img src="instagram.png">
         </a>
-        <a href="https://www.youtube.com/channel/UCIVELEfMiAFROsuN7BKFvyA?view_as=subscriber" target="_blank">
+        <a href="https:www.youtube.com/channel/UCIVELEfMiAFROsuN7BKFvyA?view_as=subscriber" target="_blank">
             <img src="youtube.png">
         </a>
-        <a href="https://www.deviantart.com/maxzyan" target="_blank">
+        <a href="https:www.deviantart.com/maxzyan" target="_blank">
             <img src="deviantart.png">
         </a>
     </div>
@@ -98,56 +131,304 @@
 <article class="gallery">
     <h2><a name="gallery"></a>Gallery</h2>
     <div class="galgrid">
-        <div class="galdiv">
+       <div class="galdiv Overlord">
             <img src="images/1.jpeg">
-            <p>Aisaka Taiga</p>
-            <p>"ToraDora"</p>
+            <p>Evileye</p>
+            <p>"Overlord"</p>
         </div>
-        <div class="galdiv">
+        <div class="galdiv VioletEvergarden">
             <img src="images/2.jpeg">
-            <p>Yuuki Asuna</p>
-            <p>"Sword Art Online"</p>
+            <p>Violet Evergarden</p>
+            <p>"Violet Evergarden"</p>
         </div>
-        <div class="galdiv">
+        <div class="galdiv FairyTail">
             <img src="images/3.jpeg">
-            <p>Rin and Yukio Okumura</p>
-            <p>"Blue Exorcist"</p>
-        </div>
-        <div class="galdiv">
-            <img src="images/4.jpg">
             <p>Natsu Dragneel</p>
             <p>"Fairy Tail"</p>
         </div>
-        <div class="galdiv">
-            <img src="images/5.jpg">
-            <p>Uraraka Ochako</p>
-            <p>"My Hero Academia"</p>
+        <div class="galdiv Vocaloid">
+            <img src="images/4.jpeg">
+            <p>Hatsune Miku</p>
+            <p>"Vocaloid"</p>
         </div>
-        <div class="galdiv">
-            <img src="images/6.jpg">
+        <div class="galdiv SwordArtOnline">
+            <img src="images/5.jpeg">
+            <p>Konno Yuuki</p>
+            <p>"Sword Art Online"</p>
+        </div>
+        <div class="galdiv LeagueofLegends">
+            <img src="images/6.jpeg">
+            <p>Ahri</p>
+            <p>"League of Legends"</p>
+        </div>
+        <div class="galdiv MyHeroAcademia">
+            <img src="images/7.jpeg">
             <p>Midoriya Izuku</p>
             <p>"My Hero Academia"</p>
         </div>
-        <div class="galdiv">
-            <img src="images/7.jpg">
-            <p>002</p>
-            <p>"Darling in the FranXX"</p>
+        <div class="galdiv MyHeroAcademia">
+            <img src="images/8.jpeg">
+            <p>Uraraka Ochako</p>
+            <p>"My Hero Academia"</p>
         </div>
-        <div class="galdiv">
-            <img src="images/8.jpg">
+        <div class="galdiv Boruto">
+            <img src="images/9.jpeg">
+            <p>Boruto Uzumaki</p>
+            <p>"Boruto"</p>
+        </div>
+        <div class="galdiv FairyTail">
+            <img src="images/10.jpeg">
+            <p>Eileen</p>
+            <p>"Fairy Tail"</p>
+        </div>
+        <div class="galdiv Fuuka">
+            <img src="images/11.jpeg">
             <p>Koyuki Hinashi</p>
             <p>"Fuuka"</p>
         </div>
-        <div class="galdiv">
-            <img src="images/9.jpg">
-            <p>Uzumaki Boruto</p>
+        <div class="galdiv SwordArtOnline">
+            <img src="images/12.jpeg">
+            <p>Yuuki Asuna</p>
+            <p>"Sword Art Online"</p>
+        </div>
+        <div class="galdiv FairyTail">
+            <img src="images/13.jpeg">
+            <p>Fairy Tail</p>
+            <p>"Fairy Tail"</p>
+        </div>
+        <div class="galdiv DateaLive">
+            <img src="images/14.jpeg">
+            <p>Kurumi Tokisaki</p>
+            <p>"Date a Live"</p>
+        </div>
+        <div class="galdiv FairyTail">
+            <img src="images/15.jpeg">
+            <p>Juvia & Gray</p>
+            <p>"Fairy Tail"</p>
+        </div>
+        <div class="galdiv DarlingintheFranXX">
+            <img src="images/16.jpeg">
+            <p>002</p>
+            <p>"Darling in the FranXX"</p>
+        </div>
+        <div class="galdiv AkamegaKill!">
+            <img src="images/17.jpeg">
+            <p>Mine</p>
+            <p>"Akame ga Kill!"</p>
+        </div>
+        <div class="galdiv BlueExorcist">
+            <img src="images/18.jpeg">
+            <p>Rin & Yukio Okumura</p>
+            <p>"Blue Exorcist"</p>
+        </div>
+        <div class="galdiv ToraDora">
+            <img src="images/19.jpeg">
+            <p>Aisaka Taiga</p>
+            <p>"ToraDora"</p>
+        </div>
+        <div class="galdiv Naruto">
+            <img src="images/20.jpeg">
+            <p>Naruto & Kurama</p>
+            <p>"Naruto"</p>
+        </div>
+        <div class="galdiv FairyTail">
+            <img src="images/21.jpeg">
+            <p>Erza Scarlet</p>
+            <p>"Fairy Tail"</p>
+        </div>
+        <div class="galdiv FairyTail">
+            <img src="images/22.jpeg">
+            <p>Juvia Lockser</p>
+            <p>"Fairy Tail"</p>
+        </div>
+        <div class="galdiv DateaLive">
+            <img src="images/23.jpeg">
+            <p>Kurumi Tokisaki</p>
+            <p>"Date a Live"</p>
+        </div>
+        <div class="galdiv FairyTail">
+            <img src="images/24.jpeg">
+            <p>Levy McGarden</p>
+            <p>"Fairy Tail"</p>
+        </div>
+        <div class="galdiv FairyTail">
+            <img src="images/25.jpeg">
+            <p>Juvia Lockser</p>
+            <p>"Fairy Tail"</p>
+        </div>
+        <div class="galdiv FairyTail">
+            <img src="images/26.jpeg">
+            <p>Anna Heartfilia</p>
+            <p>"Fairy Tail"</p>
+        </div>
+        <div class="galdiv FairyTail">
+            <img src="images/27.jpeg">
+            <p>Jellal Fernandes</p>
+            <p>"Fairy Tail"</p>
+        </div>
+        <div class="galdiv AttackonTitan">
+            <img src="images/28.jpeg">
+            <p>Levi Ackerman</p>
+            <p>"Attack on Titan"</p>
+        </div>
+        <div class="galdiv GurrenLagann">
+            <img src="images/29.jpeg">
+            <p>Yoko Littner</p>
+            <p>"Gurren Lagann"</p>
+        </div>
+        <div class="galdiv VioletEvergarden">
+            <img src="images/30.jpeg">
+            <p>Violet Evergarden</p>
+            <p>"Violet Evergarden"</p>
+        </div>
+        <div class="galdiv Naruto">
+            <img src="images/31.jpeg">
+            <p>Naruto & Sasuke</p>
+            <p>"Naruto"</p>
+        </div>
+        <div class="galdiv GurrenLagann">
+            <img src="images/32.jpeg">
+            <p>Kamina</p>
+            <p>"Gurren Lagann"</p>
+        </div>
+        <div class="galdiv SwordArtOnline">
+            <img src="images/33.jpeg">
+            <p>Yuuki Asuna</p>
+            <p>"Sword Art Online"</p>
+        </div>
+        <div class="galdiv TheWitcher">
+            <img src="images/34.jpeg">
+            <p>Geralt of Rivia</p>
+            <p>"The Witcher"</p>
+        </div>
+        <div class="galdiv TheWitcher">
+            <img src="images/35.jpeg">
+            <p>Ciri</p>
+            <p>"The Witcher"</p>
+        </div>
+        <div class="galdiv Wolverine">
+            <img src="images/36.jpeg">
+            <p>Wolverine</p>
+            <p>"Wolverine"</p>
+        </div>
+        <div class="galdiv FairyTail">
+            <img src="images/37.jpeg">
+            <p>Levy McGarden</p>
+            <p>"Fairy Tail"</p>
+        </div>
+        <div class="galdiv FairyTail">
+            <img src="images/38.jpeg">
+            <p>Natsu Dragneel</p>
+            <p>"Fairy Tail"</p>
+        </div>
+        <div class="galdiv FairyTail">
+            <img src="images/39.jpeg">
+            <p>Gajeel Redfox</p>
+            <p>"Fairy Tail"</p>
+        </div>
+        <div class="galdiv AkamegaKill!">
+            <img src="images/40.jpeg">
+            <p>Akame</p>
+            <p>"Akame ga Kill!"</p>
+        </div>
+        <div class="galdiv AttackonTitan">
+            <img src="images/41.jpeg">
+            <p>Eren Yeager</p>
+            <p>"Attack on Titan"</p>
+        </div>
+        <div class="galdiv SerathoftheEnd">
+            <img src="images/42.jpeg">
+            <p>Yuichiro Hyakuya</p>
+            <p>"Serath of the End"</p>
+        </div>
+        <div class="galdiv Overwatch">
+            <img src="images/43.jpeg">
+            <p>Reaper</p>
+            <p>"Overwatch"</p>
+        </div>
+        <div class="galdiv Naruto">
+            <img src="images/44.jpeg">
+            <p>Kakashi Hatake</p>
+            <p>"Naruto"</p>
+        </div>
+        <div class="galdiv GameofThrones">
+            <img src="images/45.jpeg">
+            <p>Sansa Stark</p>
+            <p>"Game of Thrones"</p>
+        </div>
+        <div class="galdiv SwordArtOnline">
+            <img src="images/46.jpeg">
+            <p>Yuuki Asuna</p>
+            <p>"Sword Art Online"</p>
+        </div>
+        <div class="galdiv Naruto">
+            <img src="images/47.jpeg">
+            <p>Kisame Hoshikagi</p>
+            <p>"Naruto"</p>
+        </div>
+        <div class="galdiv Boruto">
+            <img src="images/48.jpeg">
+            <p>Boruto Uzumaki</p>
             <p>"Boruto"</p>
+        </div>
+        <div class="galdiv GameofThrones">
+            <img src="images/49.jpeg">
+            <p>Arya Stark</p>
+            <p>"Game of Thrones"</p>
+        </div>
+        <div class="galdiv Other">
+            <img src="images/50.jpeg">
+            <p>Iron Man</p>
+            <p>"Iron Man"</p>
+        </div>
+        <div class="galdiv Other">
+            <img src="images/51.jpeg">
+            <p>Batman</p>
+            <p>"Batman"</p>
+        </div>
+        <div class="galdiv Other">
+            <img src="images/52.jpeg">
+            <p>Eye</p>
+            <p>-</p>
+        </div>
+        <div class="galdiv FairyTail">
+            <img src="images/53.jpeg">
+            <p>Natsu Dragneel</p>
+            <p>"Fairy Tail"</p>
+        </div>
+        <div class="galdiv Overwatch">
+            <img src="images/54.jpeg">
+            <p>Mercy</p>
+            <p>"Overwatch"</p>
+        </div>
+        <div class="galdiv Naruto">
+            <img src="images/55.jpeg">
+            <p>Naruto & Minato</p>
+            <p>"Naruto"</p>
         </div>
     </div>
 </article>
-
-
 </body>
 
 
+
+<script type="text/javascript">
+     function Select(name) 
+     {
+        var image = document.getElementsByClassName("galdiv");
+        for (var i = 0; i<image.length; i++)
+        {
+            if(image[i].classList.contains(name))
+            {
+                image[i].style.display = "block";
+         
+            }
+            else
+            {
+                image[i].style.display = "none";
+            }
+        }
+    }
+
+</script>
 </html>
