--- a/morearts.html
+++ b/morearts.html
@@ -25,7 +25,7 @@
         </div>
     </div>
     <div class="menu">
-        <a href="eng.html" class="link">
+        <a href="index.html" class="link">
         Go Back!
         </a>
     </div>
