--- a/rus.html
+++ b/rus.html
@@ -37,7 +37,7 @@
         </a>
     </div>
     <div class="menu">
-        <a href="eng.html" class="link">
+        <a href="index.html" class="link">
         English language
         </a>
     </div>
