--- a/morearts.html
+++ b/morearts.html
@@ -15,7 +15,7 @@
 <nav>
     <div class="avatar">
         <a href="https:www.youtube.com/channel/UCIVELEfMiAFROsuN7BKFvyA?view_as=subscriber" target="_blank">
-            <img src="https:pp.userapi.com/c844321/v844321737/d0101/FTya_8ng-Yc.jpg" class="avatar">
+            <img src="https://pp.userapi.com/c844321/v844321737/d0101/FTya_8ng-Yc.jpg" class="avatar">
         </a>
         <h1 class="div1">
             Shinobi Max
